--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "react-task-tracker",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://frozen-river-11954-4fdc380c8747.herokuapp.com",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
@@ -11,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "json-server": "^0.17.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
